tests/interpreter/pass/027-array.hyg
let arr: array {int} = array(2 + 2, 40 + 2);
let x: int = arrayElem(arr, 1);

assert(x = 42)