tests/interpreter/fail/028-array-empty.hyg
let arr: array {int} = array(0, 1);
let len: int = arrayLength(arr);

assert(len = 4)